cabal-version:       2.2
name:                krank
version:             0.2.2
synopsis: Krank checks your code source comments for important markers
-- description:
bug-reports: https://github.com/guibou/krank/issues
license: BSD-3-Clause
license-file:        LICENSE
author:              Guillaume Bouchard
maintainer:          guillaum.bouchard@gmail.com
homepage:            https://github.com/guibou/krank
copyright:
category: quality
description: Comments are part of our code and are not usually tested correctly. Hence their content can become incoherent or obsolete. Krank tries to avoid that by running checkers on the comment themselves.
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md HACKING.md docs/Checkers/IssueTracker.md

common shared-library
  build-depends:       base >= 4.9
                       , PyF >= 0.8.1.0
                       , aeson >= 1.4.4
                       , bytestring
                       , containers
                       , http-client >= 0.6
                       , http-types >= 0.12
                       , lifted-async
                       , mtl
                       , pcre-heavy
                       , pretty-terminal
                       , req >= 2.1.0
                       , safe-exceptions
                       , text >= 1.2.3
                       , unordered-containers >= 0.2.10
  hs-source-dirs:      src

  ghc-options:         -Wall
  default-language:    Haskell2010

library
  import: shared-library
  autogen-modules:     Paths_krank
  exposed-modules:     Krank
                       Krank.Checkers.Ignore
                       Krank.Checkers.IssueTracker
                       Krank.Formatter
                       Krank.Types
                       Utils.Display
                       Utils.Github
                       Utils.Gitlab
                       Utils.Req
                       Version
  other-modules:       Paths_krank

test-suite krank-test
  import: shared-library

  type:                exitcode-stdio-1.0
  main-is:             Spec.hs

  hs-source-dirs:      tests
  other-modules:       Test.Krank.Checkers.IssueTrackerSpec
                       Test.Utils.GithubSpec
                       Test.Utils.GitlabSpec
                       Krank
                       Krank.Checkers.Ignore
                       Krank.Checkers.IssueTracker
                       Krank.Formatter
                       Krank.Types
                       Utils.Display
                       Utils.Github
                       Utils.Gitlab
                       Utils.Req
  build-depends: hspec >= 2.7
               , hspec-expectations
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

executable krank
  main-is:             Main.hs
  build-depends:       base >=4.9 && <= 5.0
                       , PyF
                       , containers
                       , krank
                       , mtl
                       , optparse-applicative >= 0.14
                       , pcre-heavy
                       , pretty-terminal
                       , text
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts
