cabal-version:       2.2
name:                krank
version:             0.3.0
synopsis: Krank checks issue tracker link status in your source code
-- description:
bug-reports: https://github.com/guibou/krank/issues
license: BSD-3-Clause
license-file:        LICENSE
author:              Guillaume Bouchard
maintainer:          guillaum.bouchard@gmail.com
homepage:            https://github.com/guibou/krank
copyright:
category: quality
description: Krank checks issue tracker link status in your source code. When you implement a workaround because of an upstream issue, you often put a link in comment in your code. Krank will tell you when the issue associated with your workaround is closed, meaning that you may get ride of your workaround.
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md HACKING.md docs/Checkers/IssueTracker.md

common shared-library
  build-depends:       base >= 4.9
                       , PyF >= 0.8.1.0
                       , aeson >= 2
                       , bytestring
                       , containers
                       , http-client >= 0.6
                       , http-types >= 0.12
                       , lifted-async
                       , mtl
                       , pcre-heavy
                       , pretty-terminal
                       , req >= 2.1.0
                       , safe-exceptions
                       , text >= 1.2.3
                       , unordered-containers >= 0.2.10
  hs-source-dirs:      src

  ghc-options:         -Wall
  default-language:    Haskell2010

library
  import: shared-library
  autogen-modules:     Paths_krank
  exposed-modules:     Krank
                       Krank.Checkers.Ignore
                       Krank.Checkers.IssueTracker
                       Krank.Formatter
                       Krank.Types
                       Utils.Display
                       Utils.Github
                       Utils.Gitlab
                       Utils.Req
                       Version
  other-modules:       Paths_krank

test-suite krank-test
  import: shared-library

  type:                exitcode-stdio-1.0
  main-is:             Spec.hs

  hs-source-dirs:      tests
  other-modules:       Test.Krank.Checkers.IssueTrackerSpec
                       Test.Utils.GithubSpec
                       Test.Utils.GitlabSpec
                       Krank
                       Krank.Checkers.Ignore
                       Krank.Checkers.IssueTracker
                       Krank.Formatter
                       Krank.Types
                       Utils.Display
                       Utils.Github
                       Utils.Gitlab
                       Utils.Req
  build-depends: hspec >= 2.7
               , hspec-expectations
               , hspec-discover
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

executable krank
  main-is:             Main.hs
  build-depends:       base >=4.9 && <= 5.0
                       , PyF
                       , containers
                       , krank
                       , mtl
                       , optparse-applicative >= 0.14
                       , pcre-heavy
                       , pretty-terminal
                       , text
                       , process
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts
